[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/battle_bg.png" type="Texture" id=1]
[ext_resource path="res://Scripts/BattleMain.gd" type="Script" id=2]
[ext_resource path="res://Tilesets/Ground.tres" type="TileSet" id=3]
[ext_resource path="res://Tilesets/Wall.tres" type="TileSet" id=4]
[ext_resource path="res://Prefab/Dice.tscn" type="PackedScene" id=5]

[node name="BattleScene" type="Node2D"]
script = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = -132.0
margin_top = -85.0
margin_right = 132.0
margin_bottom = 84.0
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 20
patch_margin_right = 10
patch_margin_bottom = 20

[node name="Ground" type="TileMap" parent="."]
position = Vector2( -96, -64 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 4
collision_mask = 4
format = 1
tile_data = PoolIntArray( 65536, 0, 0, 65537, 2, 0, 65538, 0, 0, 65539, 0, 0, 65540, 1, 0, 65541, 0, 0, 65542, 0, 0, 65543, 1, 0, 65544, 0, 0, 65545, 0, 0, 65546, 2, 0, 65547, 0, 0, 131072, 7, 0, 131073, 7, 0, 131074, 7, 0, 131075, 7, 0, 131076, 7, 0, 131077, 7, 0, 131078, 7, 0, 131079, 7, 0, 131080, 7, 0, 131081, 7, 0, 131082, 7, 0, 131083, 7, 0, 196608, 4, 0, 196609, 4, 0, 196610, 4, 0, 196611, 8, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 3, 0, 196619, 4, 0, 262144, 4, 0, 262145, 8, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 8, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 327680, 4, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 8, 0, 327690, 4, 0, 327691, 4, 0, 393216, 4, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 3, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0 )

[node name="Wall" type="TileMap" parent="."]
position = Vector2( -96, -64 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
collision_layer = 4
collision_mask = 4
format = 1
tile_data = PoolIntArray( -2, 0, 4, -1, 0, 131074, -65536, 0, 131074, -65535, 0, 131074, -65534, 0, 131074, -65533, 0, 131074, -65532, 0, 131074, -65531, 0, 131074, -65530, 0, 131074, -65529, 0, 131074, -65528, 0, 131074, -65527, 0, 131074, -65526, 0, 131074, -65525, 0, 131074, -65524, 0, 131074, -65523, 0, 5, 65534, 0, 65539, 65535, 0, 1, 0, 0, 2, 1, 0, 2, 2, 0, 2, 3, 0, 2, 4, 0, 2, 5, 0, 2, 6, 0, 2, 7, 0, 2, 8, 0, 2, 9, 0, 2, 10, 0, 2, 11, 0, 2, 12, 0, 3, 13, 0, 65537, 131070, 0, 65539, 131071, 0, 65537, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65548, 0, 65539, 65549, 0, 65537, 196606, 0, 65539, 196607, 0, 65537, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 131082, 4, 0, 131084, 0, 65539, 131085, 0, 65537, 262142, 0, 65539, 262143, 0, 65537, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196620, 0, 65539, 196621, 0, 65537, 327678, 0, 65539, 327679, 0, 65537, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262156, 0, 65539, 262157, 0, 65537, 393214, 0, 65539, 393215, 0, 65537, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 4, 0, 327692, 0, 65539, 327693, 0, 65537, 458750, 0, 65539, 458751, 0, 65537, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393228, 0, 65539, 393229, 0, 65537, 524286, 0, 65539, 524287, 0, 131073, 458752, 0, 131074, 458753, 0, 131074, 458754, 0, 131074, 458755, 0, 131074, 458756, 0, 131074, 458757, 0, 131074, 458758, 0, 131074, 458759, 0, 131074, 458760, 0, 131074, 458761, 0, 131074, 458762, 0, 131074, 458763, 0, 131074, 458764, 0, 131075, 458765, 0, 65537, 589822, 0, 65540, 589823, 0, 2, 524288, 0, 2, 524289, 0, 2, 524290, 0, 2, 524291, 0, 2, 524292, 0, 2, 524293, 0, 2, 524294, 0, 2, 524295, 0, 2, 524296, 0, 2, 524297, 0, 2, 524298, 0, 2, 524299, 0, 2, 524300, 0, 2, 524301, 0, 65541 )

[node name="PlayerNode" type="Node2D" parent="."]
position = Vector2( -56, 8 )

[node name="Enemy" type="Node2D" parent="."]
position = Vector2( -96, -64 )

[node name="EnemyNode_1" type="Node2D" parent="Enemy"]
position = Vector2( 152, 72 )

[node name="EnemyNode_2" type="Node2D" parent="Enemy"]
position = Vector2( 128, 48 )

[node name="EnemyNode_3" type="Node2D" parent="Enemy"]
position = Vector2( 128, 96 )

[node name="Tween" type="Tween" parent="."]

[node name="Dice" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 0, 0 )
